# usg-radius

./: .dockerignore  .gitignore  .markdownlint.json  BENCHMARK_RESULTS.md  CHANGELOG.md  COMMIT_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  Makefile  README.md  RELEASE_NOTES.md  ROADMAP.md  TEAP_ANALYSIS.md  WORKSPACE.md  benchmark_results.txt  config.example.json  config.schema.json  docker-compose.test.yml  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml
benches/: packet_benchmarks.rs  radius_server_bench.rs  server_benchmarks.rs
crates/: README.md
crates/radius-proto/: Cargo.toml
crates/radius-proto/src/: accounting.rs  auth.rs  chap.rs  eap.rs  lib.rs  message_auth.rs  validation.rs
crates/radius-proto/src/attributes/: attribute.rs  mod.rs  types.rs
crates/radius-proto/src/eap/: eap_teap.rs
crates/radius-proto/src/packet/: code.rs  mod.rs  packet.rs
crates/radius-proto/src/revocation/: README.md  cache.rs  config.rs  crl.rs  error.rs  fetch.rs  mod.rs  ocsp.rs  ocsp_cache.rs  verifier.rs
crates/radius-proto/tests/: revocation_integration.rs
crates/radius-server/: Cargo.toml
crates/radius-server/examples/: simple_client.rs
crates/radius-server/src/: accounting.rs  audit.rs  buffer_pool.rs  cache.rs  cache_ha.rs  config.rs  eap_auth.rs  health.rs  ldap_auth.rs  lib.rs  main.rs  metrics.rs  postgres_auth.rs  ratelimit.rs  ratelimit_ha.rs  server.rs
crates/radius-server/src/accounting/: file.rs  postgres.rs
crates/radius-server/src/proxy/: cache.rs  error.rs  handler.rs  health.rs  home_server.rs  mod.rs  pool.rs  realm.rs  retry.rs  router.rs  stats.rs
crates/radius-server/src/state/: config.rs  error.rs  memory.rs  mod.rs  session_manager.rs  valkey.rs
docs/: HA_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  OCSP_IMPLEMENTATION.md  PERFORMANCE.md  README.md  pyproject.toml  zensical.toml
docs/docs/: index.md  quick-reference.md
docs/docs/api/: EAP-TLS-API.md  overview.md
docs/docs/backends/: BACKEND_INTEGRATIONS.md  LDAP_INTEGRATION.md  POSTGRES_INTEGRATION.md
docs/docs/configuration/: clients.md  server.md  users.md
docs/docs/deployment/: DEPLOYMENT.md  FREERADIUS_MIGRATION.md  HIGH_AVAILABILITY.md  PERFORMANCE.md  QUICKSTART.md
docs/docs/development/: CRL-IMPLEMENTATION-PLAN.md  PROXY_IMPLEMENTATION_PLAN.md  ROADMAP.md  WORKSPACE.md
docs/docs/examples/: basic-auth.md  eap-tls-example.md
docs/docs/getting-started/: installation.md
docs/docs/protocol/: EAP-TLS.md  RFC-COMPLIANCE.md  attributes.md  overview.md
docs/docs/proxy/: README.md
docs/docs/security/: overview.md
examples/: README.md  docker-compose-ha.yml  eap_server.rs  eap_teap_server.rs  ha_cluster_server.rs  haproxy.cfg  ocsp_check.rs  perf_bench.rs  postgres-schema.sql  postgres_schema.sql  prometheus.yml  proxy_config.json  proxy_server.rs
examples/configs/: active-directory.json  basic-homelab.json  docker.json  enterprise.json  ldap.json  postgres.json  small-business.json
examples/docker/: .env.example
examples/kubernetes/: README.md  namespace.yaml  radius-server.yaml  valkey.yaml
examples/systemd/: usg-radius.service
scripts/: run_integration_tests.sh
tests/: INTEGRATION_TESTS.md  backend_e2e_tests.rs  ha_integration_tests.rs  integration_tests.rs  ldap_integration_tests.rs  ldap_tests.rs  postgres_integration_tests.rs  postgres_tests.rs
tests/fixtures/ldap/ldif/: users.ldif
tests/fixtures/postgres/: test-data.sql
tests/pki/: README.md  ca.cnf  client.cnf  index.txt  intermediate-ca.cnf
tests/pki/ca/: intermediate-ca.crt  intermediate-ca.csr  intermediate-ca.srl  root-ca.crt  root-ca.srl
tests/pki/certs/: client-revoked.crt  client-revoked.crt.der  client-revoked.csr  client-valid.crt  client-valid.csr
tests/pki/crls/: intermediate-ca-empty.crl  intermediate-ca-empty.crl.der  intermediate-ca.crl  intermediate-ca.crl.der
tests/pki/private/: client-revoked.key  client-valid.key  intermediate-ca.key  root-ca.key
tests/test-data/: init-ldap.ldif  init-ldap.sh  init-postgres.sh  init-postgres.sql
tools/: radius_load_test.rs
