[workspace]
members = [
    "crates/radius-proto",
    "crates/radius-server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["John Edward Willman V <john.willman.1@us.af.mil>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/192d-Cyberspace-Control-Squadron/usg-radius"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Cryptography
md5 = "0.7"
rand = "0.8"

# Error handling
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Network
ipnetwork = "0.20"

# Caching and concurrency
dashmap = "6.1"

# Time
chrono = "0.4"

# Development
hex = "0.4"
tempfile = "3.0"

# Internal crates
radius-proto = { path = "crates/radius-proto" }
radius-server = { path = "crates/radius-server" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
