[workspace]
members = ["crates/radius-proto", "crates/radius-server"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["John Edward Willman V <john.willman.1@us.af.mil>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/192d-Cyberspace-Control-Squadron/usg-radius"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Cryptography
hmac = "0.12"
md5-digest = { package = "md-5", version = "0.10" }
md5 = "0.8"
rand = "0.9"

# Error handling
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Network
ipnetwork = "0.21"

# Caching and concurrency
dashmap = "6.1"

# Time
chrono = "0.4"

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }

# LDAP
ldap3 = "0.12"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "chrono",
] }
bcrypt = "0.17"

# Development
hex = "0.4"
tempfile = "3.24"
criterion = "0.8"

# Internal crates
radius-proto = { path = "crates/radius-proto" }
radius-server = { path = "crates/radius-server" }

[package]
name = "usg-radius-workspace"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
radius-proto.workspace = true
radius-server.workspace = true
tokio.workspace = true
tempfile.workspace = true
serde_json.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "packet_benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
