[package]
name = "radius-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "RADIUS server implementation"

[[bin]]
name = "usg-radius"
path = "src/main.rs"

[dependencies]
radius-proto.workspace = true
tokio.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
env_logger.workspace = true
ipnetwork.workspace = true
dashmap.workspace = true

[dev-dependencies]
hex.workspace = true
